Fixed element overlap and added two text columns

--- a/trial.css
+++ b/trial.css
@@ -5,40 +5,32 @@
   box-sizing: border-box;
 }
 
-/* @font-face { font-family: Hylian; src: url('/home/codelouisville/Fonts/HyliaSerif/Hylia Serif Beta v0-009/HyliaSerifBeta-Regular.otf'); } */
+@font-face { font-family: 'Hylian'; src: url('/home/codelouisville/Fonts/HyliaSerif/Hylia Serif Beta v0-009/HyliaSerifBeta-Regular.otf'); }
 
 body {
 	line-height: 1.6;
-	color: #3a3a3a;
+	color: #40f840;
+  background: #a42529 url(https://c.wallhere.com/photos/87/68/The_Legend_of_Zelda_Breath_of_the_Wild_The_Legend_of_Zelda_Nintendo_NX_Nintendo_Switch_Hyrule_video_games-1852.jpg!d) no-repeat center;
+  padding: 0;
+  margin: 0 auto;
+  font-family: 'Hylian', serif;
+  background-size: cover;
+  /* position: fixed; */
+  /* top: 0;
+  left: 0; */
 
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
 }
 
 h1 {
   font-size: 5.625rem; /* 90px/16px  */
-  color: rgba(255, 255, 255, 1);
+  color: #40f840;
   text-align: center;
   text-transform: uppercase;
   font-weight: normal;
   line-height: 1.3;
-}
-
-h2 {
-  /* text-align: center;
-  margin-top: 0; */
-
-  font-size: 3.3125em; /* 53px/16px  */
-  font-weight: normal;
-  line-height: 1.1;
-  margin: 0 0 .5em; /* 0 0 26px */
-
-}
-
-fieldset {
-  text-align: center;
-}
-
-legend{
-  text-align: center;
 }
 
 a {
@@ -49,41 +41,116 @@ a {
 
 .main-header {
   text-align: center;
-
-  padding-top: 1.5em;
-
-  /* padding-bottom: 1.5em;
-
-  margin-bottom: 30px; */
-
-  /* padding-top: 170px; */
-  /* height: 850px; */
-  background: #0b9d11 url(/home/codelouisville/Pictures/zelda_forest.jpg) no-repeat center;
-  background-size: cover;
-}
-/* Container needed to position the button. Adjust the width as needed */
-
-.sfbww {
- position: absolute;
- width: 50%;
-}
-
-/* Make the image responsive */
-.sfbww img {
- width: 50%;
- height: auto;
- position: center;
+  margin: 0 auto;
+  padding: 0;
 
 }
 
-.container .btn:hover {
- background-color: black;
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1500px;
+  position: relative;
+  margin: auto;
+  width: 610px;
+  height: 485px;
+  /* padding: 10px 10px; */
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+    /* width: 610px;
+    height: 485px; */
+    margin: 0 auto;
+
+}
+
+.images {
+  /* width: 1500px;
+  height: 500px; */
+  width: 610px;
+  height: 485px;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 10px 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+
+a:hover {
+  color: rgba(255, 169, 73, .4);
 }
 
 .navbar {
  overflow: hidden;
- background-color: #279d31;
- font-family: Arial;
+ background-color: #15a6d3;
+ font-family: 'Hylian', serif;
 }
 
 /* Links inside the navbar */
@@ -114,9 +181,9 @@ a {
  margin: 0; /* Important for vertical align on mobile phones */
 }
 
-/* Add a purple background color to navbar links on hover */
+/* Add a blue background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
- background-color: #800080;
+ background-color: #20f0d8;
 }
 
 /* Dropdown content (hidden by default) */
@@ -159,127 +226,100 @@ a {
   background: green;
 }
 
-.container {
-  padding-left: 1em;
-  padding-right: 1em;
-
-  /* background: no-repeat center;
-  background-size: cover; */
-}
-
-#imageContainer {
-width: 60%;
-margin: auto;
-/* height: auto; */
-
-}
-
-
-/* .mySlides {
-  background: no-repeat center;
-  background-size: contain;
+/* #allContainer{
+  width: 610px;
+  height: 485px;
+  display: block;
+  position: relative;
+  top: 50%;
+  margin: 0 auto;
+  border: solid;
 } */
 
-.number{
-  margin: auto;
-  text-align: center;
+#dotContainer {
+  margin: 0 auto;
+  /* display: inline-block; */
+}
 
+#content {
+  /* padding-left: 1em;
+  padding-right: 1em; */
+  display: block;
+  width: 100%;
+  /* clear: both; */
+  margin: 5em 0;
+
+}
+
+.col {
+  display: inline-block;
+  text-align: center;
+  width: 50%;
+  margin-right: -4px;
+  vertical-align: top;
+  padding-left: 1em;
+  padding-right: 1em;
+  color: red;
+}
+
+
+/* #imageContainer {
+width: -50%;
+margin: 10px 10px;
+height: auto;
+position: relative;
+} */
+
+.wrapper {
+  display: block;
+  position: relative;
+  margin: 5em;
+  text-align: center;
+  color: #a42529;
+  margin: 10px 15px;
+  padding: 150px;
 }
 
 .main-footer {
   text-align: center;
-  padding: 1em 0;
-	background: #279d31;
+	background: #15a6d3;
+  position: relative;
+  bottom: 0;
+  width:100%;
+  height:60px;
+  margin: 0 auto;
+  color: #a42529;
 }
 
-.main-nav a {
-	font-size: .95em;
-	color: #3acec2;
-	text-transform: uppercase;
-}
-
-.main-nav a:hover {
-	color: #093a58;
-}
-
-.hyrule a,
-.main-nav a {
+.hyrule a {
   padding: 10px 15px;
+  margin-top: 100px;
   display: block;
+  color: #ef3f54;
 }
+
+.hyrule {
+  /* width: 240px;
+  margin-right: 50px 0; */
+  text-align: center;
+  margin-top: 50px;
+  /* font-family: 'Hylian'; */
+}
+
 /*=============================================================================
 Media Queries
 =============================================================================*/
+/* is supposed to stick footer to bottom of page and keep page viewable in one window */
 
 @media (min-width: 769px) {
-  /* is supposed to stick footer to bottom of page and keep page viewable in one window */
-  .wrap {
-    min-height: calc(100vh - 89px);
   }
 
-  .mySlides {
-    position: absolute;
-    background: no-repeat center;
-    background-size: contain;
-    width: 50%;
-
-    /* background: no-repeat center;
-    background-size: contain; */
-
-    /* margin-right: 50px 0; */
-    /* margin-top: 50px; */
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
   }
 
-  .sfbww .btn-left {
-   position: relative;
-   top: -50%;
-   left: 1em;
-   transform: translate(452%, 400%);
-   -ms-transform: translate(-50%, -50%);
-   background-color: #555;
-   color: white;
-   font-size: 16px;
-   padding: 12px 24px;
-   border: none;
-   cursor: pointer;
-   border-radius: 5px;
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
   }
-
-  .sfbww .btn-right {
-   position: relative;
-   top: -50%;
-   right: 1em;
-   transform: translate(1500%, 400%);
-   -ms-transform: translate(-50%, -50%);
-   background-color: #555;
-   color: white;
-   font-size: 16px;
-   padding: 12px 24px;
-   border: none;
-   cursor: pointer;
-   border-radius: 5px;
-  }
-
-  .container {
-    width: 80%;
-    max-width: 1150px;
-    margin: 0 auto;
-  }
-
-  .hyrule,
-  .main-nav,
- /*sets all on same line */
-  .main-nav li {
-      display: inline-block;
-    }
-
-    .hyrule {
-      width: 240px;
-      margin-right: 50px 0;
-      margin-top: 50px;
-    }
-
-    .main-nav li{
-      margin-right: -4px;
-    }
-}
